--- a/conf/production.properties
+++ b/conf/production.properties
@@ -1,7 +1,19 @@
 
+#session.host = 127.0.0.1:6379
+session.host = redis://127.0.0.1:22122
 
-session.host = redis://127.0.0.1:6379
-
+#Twemproxy
 test.host = 127.0.0.1
 test.port = 22122
+
+#ShardedJedis
+## host:port:password
 test.shards = 127.0.0.1:1111:;127.0.0.2:2222;127.0.0.3:3333:cccc
+
+#Transaction
+transaction.host = 127.0.0.1
+transaction.port = 6380
+
+#Pipeline
+pipeline.host = 127.0.0.1
+pipeline.port = 6381
