--- a/conf/development.properties
+++ b/conf/development.properties
@@ -8,7 +8,8 @@ test.port = 22122
 
 #ShardedJedis
 ## host:port:password
-test.shards = 127.0.0.1:1111:;127.0.0.2:2222;127.0.0.3:3333:cccc
+#test.shards = 127.0.0.1:1111:;127.0.0.2:2222;127.0.0.3:3333:cccc
+test.shards = 127.0.0.1:6380;127.0.0.1:6381;127.0.0.1:6382
 
 #Transaction
 transaction.host = 127.0.0.1
