--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,8 @@
     <version>1.0.0</version>
     <packaging>jar</packaging>
     <name>ntc-jedis</name>
+    <description>ntc-jedis is module java Redis client by Jedis</description>
+    <url>https://github.com/congnghia0609/ntc-jedis</url>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.7</maven.compiler.source>
